[package]
name = "rust_emq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
dotenv = "0.15.0"

[[bin]]
name = "sub"
path = "src/sub.rs"

[[bin]]
name = "pub"
path = "src/publish.rs"

# [[bin]]
# name = "conn"
# path = "src/conn.rs"

# [[bin]]
# name = "sub"
# path = "src/sub/main.rs"
#
# [[bin]]
# name = "pub"
# path = "src/pub/main.rs"
